# intel4004-emulator

./: CMakeLists.txt  README.md
src/: cpu.cpp  cpu.h  main.cpp  mnemonics.cpp  mnemonics.h
